tree_sitter_v/grammar.js
    source_file: ($) =>
      repeat(
        seq(
          choice($._top_level_declaration, $._statement),
          optional($._automatic_separator)
        )
      ),

    _top_level_declaration: ($) =>
      choice(
        $.const_declaration,
        $.global_var_declaration,
        $.function_declaration,
        $.type_declaration,
        $.struct_declaration,
        $.enum_declaration,
        $.interface_declaration,
        $.import_declaration,
        $.module_clause
      ),

    _expression: ($) =>
      choice(
        $.empty_literal_value,
        $.int_literal,
        $.float_literal,
        $._string_literal,
        $.rune_literal,
        $._reserved_identifier,
        $.binded_identifier,
        $.identifier,
        $._single_line_expression,
        $.type_initializer,
        $.map,
        $.array,
        $.fixed_array,
        $.unary_expression,
        $.binary_expression,
        $.is_expression,
        $.index_expression,
        $.slice_expression,
        $.type_cast_expression,
        $.as_type_cast_expression,
        $.call_expression,
        $.special_call_expression,
        $.fn_literal,
        $.selector_expression,
        $.parenthesized_expression,
        $._expression_with_blocks
      ),

    unary_expression: ($) =>
      prec(
        PREC.unary,
        seq(
          field("operator", choice(...unary_operators)),
          field("operand", choice($._expression))
        )
      ),

    call_expression: ($) =>
      prec.right(
        PREC.comparative,
        seq(
          field(
            "function",
            choice(
              $.identifier,
              $.binded_identifier,
              $.comptime_identifier,
              $.selector_expression,
              $.comptime_selector_expression
            )
          ),
          field("type_parameters", optional($.type_parameters)),
          field("arguments", $.argument_list),
          optional($.option_propagator)
        )
      ),

    type_initializer: ($) =>
      prec(
        PREC.composite_literal,
        seq(
          field(
            "type",
            choice(
              $.builtin_type,
              $.type_identifier,
              $.type_placeholder,
              $.generic_type,
              $._binded_type,
              $.qualified_type,
              $.pointer_type,
              $.array_type,
              $.fixed_array_type,
              $.map_type,
              $.channel_type
            )
          ),
          field("body", $.literal_value)
        )
      ),

    literal_value: ($) =>
      seq(
        "{",
        choice(
          repeat(
            seq(
              choice($.spread_operator, $.keyed_element),
              optional(choice(",", terminator))
            )
          ),
          // For short struct init syntax
          repeat(seq(alias($._expression, $.element), optional(",")))
        ),
        "}"
      ),

    keyed_element: ($) => seq($._element_key, field("value", $._expression)),

    _element_key: ($) =>
      seq(
        field(
          "name",
          choice(
            $._field_identifier,
            $._string_literal,
            $.int_literal,
            $.call_expression,
            $.selector_expression,
            $.type_selector_expression,
            $.index_expression
          )
        ),
        token.immediate(":")
      ),

    int_literal: ($) => token(int_literal),

    _reserved_identifier: ($) =>
      alias(choice("array", "string", "char", "sql"), $.identifier),

    identifier: ($) =>
      token(
        choice(
          seq(
            choice(unicode_letter_lower, "_"),
            repeat(choice(letter, unicode_digit))
          ),
          seq("@", choice(...all_keywords.map(k => token.immediate(k))))
        )
      ),

    // Some of the syntaxes in V are restricted
    // to be in a single line. That's why an identifier
    // immediate token is created to solve this concern.
    _mutable_prefix: ($) =>
      prec.left(
        choice(
          seq(mut_keyword, optional(static_keyword)),
          shared_keyword
        )
      ),

    mutable_expression: ($) =>
      prec(
        PREC.resolve,
        seq(
          $._mutable_prefix,
          $._expression
        )
      ),

    identifier_list: ($) =>
      prec(PREC.and, comma_sep1(choice($.mutable_identifier, $.identifier, $._reserved_identifier))),

    expression_list: ($) =>
      prec(PREC.resolve, comma_sep1(choice($._expression, $.mutable_expression))),

    // TODO: any expression on the right that is recognized
    // as external tokens will be deduced as separate nodes
    // instead of having under the same expression_list node
    _expression_list_repeat1: ($) =>
      prec(
        PREC.resolve, 
        seq(
          choice(
            $._expression, 
            $.mutable_expression
          ), 
          repeat1(
            seq(
              ",", 
              choice(
                $._expression, 
                $.mutable_expression
              )
            )
          )
        )
      ),

    parameter_list: ($) =>
      prec(PREC.resolve, seq("(", comma_sep($.parameter_declaration), ")")),

    argument_list: ($) =>
      seq(
        "(",
        optional(
          seq(
            choice(
              $._expression,
              $.mutable_expression,
              $.keyed_element,
              $.spread_operator
            ),
            // TODO: accept terminator as argument separator for now
            // to avoid complexities in the grammar.
            // Finalize the syntax with keyed elements (aka struct init fields)
            repeat(
              seq(
                choice(",", $._automatic_separator),
                choice(
                  $._expression,
                  $.mutable_expression,
                  $.keyed_element,
                  $.spread_operator
                )
              )
            ),
            optional($._automatic_separator)
          )
        ),
        ")"
      ),

    _type: ($) => choice($._simple_type, $.option_type, $.multi_return_type),

    _binded_type: ($) => prec.right(alias($.binded_identifier, $.binded_type)),

    type_identifier: ($) =>
      token(seq(unicode_letter_upper, repeat1(choice(letter, unicode_digit)))),

    _statement_list: ($) =>
      repeat1(seq(
        $._statement,
        optional($._automatic_separator)
      )),

    _statement: ($) =>
      choice(
        $._simple_statement,
        $.assert_statement,
        $.continue_statement,
        $.break_statement,
        $.return_statement,
        $.asm_statement,
        $.go_statement,
        $.goto_statement,
        $.labeled_statement,
        $.empty_labeled_statement,
        $.defer_statement,
        $.for_statement,
        $.comptime_for_statement,
        $.send_statement,
        $.block,
        $.hash_statement
      ),

    short_var_declaration: ($) =>
      prec.right(
        seq(
          field("left", $.expression_list),
          ":=",
          field("right", $.expression_list)
        )
      ),

    assignment_statement: ($) =>
      seq(
        field("left", $.expression_list),
        field("operator", choice(...assignment_operators)),
        field("right", $.expression_list)
      ),

    block: ($) => 
      seq(
        "{", 
        seq(
          optional($._statement_list), 
          optional(alias($._expression_list_repeat1, $.expression_list))
        ), 
        "}"
      ),

    unsafe_expression: ($) => seq(unsafe_keyword, $.block),

    function_declaration: ($) =>
      prec.right(
        seq(
          field("attributes", optional($.attribute_list)),
          optional(pub_keyword),
          fn_keyword,
          field("receiver", optional($.parameter_list)),
          field("exposed_variables", optional($.exposed_variables_list)),
          field(
            "name",
            choice($.binded_identifier, $.identifier, $.overloadable_operator)
          ),
          field("type_parameters", optional($.type_parameters)),
          field(
            "parameters",
            choice($.parameter_list, $.type_only_parameter_list)
          ),
          field("result", optional($._type)),
          field("body", optional($.block))
        )
      ),

    selector_expression: ($) =>
      prec(
        PREC.primary,
        seq(
          field("operand", $._expression),
          ".",
          field(
            "field",
            choice(
              $.identifier,
              $.type_identifier,
              alias($.type_placeholder, $.type_identifier),
              $._reserved_identifier,
              $.comptime_identifier,
              $.comptime_selector_expression
            )
          )
        )
      ),

    module_clause: ($) =>
      seq(
        field("attributes", optional($.attribute_list)),
        "module",
        " ",
        alias($.immediate_identifier, $.module_identifier)
      ),
